2004-09-28 1.2.18 Jeekay
* Change INFO so only the user/csc/opers can see if a user is globally suspended
* Added PARTNER channel flag
* Lower SET (nopurge|special) to *800
* Bumped version to 1.2.18

2004-08-19 1.2.17 Jeekay
* Changed auto-idle-part message to be a bit more useful to users
* Moved auto-idle part time into configuration file & bumped from 2d to 7d
* Bumped version to 1.2.17

2004-04-22 1.2.16 Jeekay
* Handle bans of hidden hosts properly
* Allow users to either accept or reject notes from a set of users
* Fix handling of +T on burst
* UPDATES
* Remove #coder-com verifies
* Changed format of failed login log to clarify what is what
* Bumped version to 1.2.16

2004-01-25 1.2.15 Jeekay
* Removed OutputFlood code as it only ever affected bots
* Bumped version to 1.2.15

2003-11-28 1.2.14 Jeekay
* Prevent channels with COMMENT or LOCKED from being purged
* Bumped version to 1.2.14

2003-11-08 1.2.13 Jeekay
* Fixed spurious RECOVER messages
* Fixed core when a user was serveropped and globally suspended
* Changed all references from `memo' to `note'
* Bumped version to 1.2.13

2003-10-10 1.2.12 Jeekay
* Removed LISTEN events
* Respect sql_pass if given
* Added INVISIBLE to list of flags shown for users
* Added IDLE flag for channels that have been autoparted
* Check we are opped before issuing modes
* If we join a channel, set AUTOJOIN
* Added support for cmode +T
* Added UPDATEIDLE to part channels with noone else in
* Bumped version to 1.2.12

2003-10-02 1.2.11 Jeekay
* Fixed USERFLAGS error message.
* Bumped version to 1.2.11

2003-05-29 1.2.10 Jeekay
* Fixed code to allow ADDUSER to continue after an adding failure
* Inform the user when MAXLOGINS is causing auth to fail
* Bumped version to 1.2.10

2003-04-20 1.2.09 Jeekay
* Added ability to have dynamic runtime configuration
* Moved MOTD config from static code to database
* Bumped version to 1.2.09

2003-04-10 1.2.08 Jeekay
* Fixed silly logging of non-admins logging out.
* Bumped version to 1.2.08